# summit-seo-amplify

./: .gitignore  amplify.yml  amplify_outputs.json  hello.py  package-lock.json  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: architecture-validation.mdc  development-guide.mdc  file-management.mdc  task-workflow.mdc  typescript-standards.mdc
.github/workflows/: backend-cicd.yaml
amplify/data/: resource.ts
backend/: .env  README.md  add-custom-attribute.sh  cognito-client-config.json  cognito-user-pool-config.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py  tenants.py  users.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  dynamodb.py
backend/app/models/: survey.py  tenant.py  user.py
backend/app/utils/: cognito.py  security.py
docs/: API_Development_Guide.md  COGNITO.md  architecture.md  architecture.mermaid  database.md  implementation-plan.md  landing-page-example.md  product-requirements.md  progress.md  scratchpad.md  tasks.md  tech-stack.md
docs/rules/: development-guide.md  file-management.md  task-workflow.md  typescript-guidelines.md  validation-rules.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  UserProfile.tsx  amplify-outputs.d.ts  index.css  main.tsx  routeTree.gen.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: LandingPage.tsx
frontend/src/routes/: __root.tsx  confirm-signup.tsx  dashboard.tsx  forgot-password.tsx  (+4 more)
infrastructure/: package-lock.json
infrastructure/lib/: infrastructure-stack.ts
lambda_fns/cognito_post_confirmation/: index.py
references/backend/: Dockerfile  alembic.ini  basic_survey_schema.json  prelaunch-guide.md  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  stacktrace
references/latest-seo-app/: Dockerfile  package-lock.json  package.json  tailwind.config.js
src/: App.tsx
(+119 files in other folders)
